Fix issue #43 by adding white-space: nowrap to tab labels

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -573,6 +573,7 @@ table label, table input, table select {
     overflow: hidden;
     cursor: pointer;
     text-transform: none;
+    white-space: nowrap;
 }
 
 #tabs li label.changed::before, #tabs-reveal-menu li label.changed:before {
